syntax = "proto3";

option java_package = "com.example.calculator";
option java_multiple_files = true;

message Operands{
    int64 lop = 1;
    int64 rop = 2;
}

message PrimesRequest{
    int32 from = 1;
    int32 to = 2;
}

message AverageRequest{
    int32 num = 1;
}

message MaxRequest{
    int32 num = 1;
}